--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-    "token": "6080038242:AAETr61XYK5tsBEfmJZy6jhPvd_5z",
-    "openai": "sk-nprlQy150KeE9WtTXAmQT3BlbkFJ3cGa507TPvKnIL8jb"
+    "token": "your group token",
+    "openai": "your chatgpt-openai token"
 }
